<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/infoLayouts"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/small_margin"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgAvatar"
                android:layout_width="@dimen/avatar_size_large"
                android:layout_height="@dimen/avatar_size_large"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerCrop"
                tools:ignore="ContentDescription" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/name1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_margin"
                android:text="@string/lbl_user_name"
                android:textColor="@color/black"
                android:textSize="@dimen/normal_font"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:background="@drawable/home_url_text_view_background"
                android:padding="@dimen/small_margin"
                android:textColor="@color/black"
                android:textSize="@dimen/small_font" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/email1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_margin"
                android:text="@string/lbl_user_email"
                android:textColor="@color/black"
                android:textSize="@dimen/normal_font"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:background="@drawable/home_url_text_view_background"
                android:padding="@dimen/small_margin"
                android:textColor="@color/black"
                android:textSize="@dimen/small_font" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/bio1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_margin"
                android:text="@string/lbl_user_bio"
                android:textColor="@color/black"
                android:textSize="@dimen/normal_font"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/bio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:background="@drawable/home_url_text_view_background"
                android:padding="@dimen/small_margin"
                android:textColor="@color/black"
                android:textSize="@dimen/small_font" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/blog1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_margin"
                android:text="@string/lbl_user_blog"
                android:textColor="@color/black"
                android:textSize="@dimen/normal_font"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/blog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:background="@drawable/home_url_text_view_background"
                android:padding="@dimen/small_margin"
                android:textColor="@color/black"
                android:textSize="@dimen/small_font" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/company1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_margin"
                android:text="@string/lbl_user_company"
                android:textColor="@color/black"
                android:textSize="@dimen/normal_font"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:background="@drawable/home_url_text_view_background"
                android:padding="@dimen/small_margin"
                android:textColor="@color/black"
                android:textSize="@dimen/small_font" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/followers1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_margin"
                android:text="@string/lbl_user_followers"
                android:textColor="@color/black"
                android:textSize="@dimen/normal_font"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/followers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:background="@drawable/home_url_text_view_background"
                android:padding="@dimen/small_margin"
                android:textColor="@color/black"
                android:textSize="@dimen/small_font" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/following1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_margin"
                android:text="@string/lbl_user_following"
                android:textColor="@color/black"
                android:textSize="@dimen/normal_font"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/following"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:background="@drawable/home_url_text_view_background"
                android:padding="@dimen/small_margin"
                android:textColor="@color/black"
                android:textSize="@dimen/small_font" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/public_repos1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_margin"
                android:text="@string/lbl_user_public_repos"
                android:textColor="@color/black"
                android:textSize="@dimen/normal_font"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/public_repos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:background="@drawable/home_url_text_view_background"
                android:padding="@dimen/small_margin"
                android:textColor="@color/black"
                android:textSize="@dimen/small_font" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/public_gists1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_margin"
                android:text="@string/lbl_user_public_gists"
                android:textColor="@color/black"
                android:textSize="@dimen/normal_font"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/public_gists"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:background="@drawable/home_url_text_view_background"
                android:padding="@dimen/small_margin"
                android:textColor="@color/black"
                android:textSize="@dimen/small_font" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/created_at1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_margin"
                android:text="@string/lbl_user_created_at"
                android:textColor="@color/black"
                android:textSize="@dimen/normal_font"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/created_at"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:background="@drawable/home_url_text_view_background"
                android:padding="@dimen/small_margin"
                android:textColor="@color/black"
                android:textSize="@dimen/small_font" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/updated_at1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_margin"
                android:text="@string/lbl_user_updated_at"
                android:textColor="@color/black"
                android:textSize="@dimen/normal_font"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/updated_at"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:background="@drawable/home_url_text_view_background"
                android:padding="@dimen/small_margin"
                android:textColor="@color/black"
                android:textSize="@dimen/small_font" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</layout>